Fix rendering of nearly-perfect Liquify mask squares

Before this commit, slightly uneven, but nearly perfectly
square grid parts would still be processed using the polygon
or the square copying code. This commit ensures that only true perfect
squares are processed using that code.
The squares must be both square and pixel aligned to a tolerance of
0.001. This tolerance is big enough to cover the "pixel alignment"
fix that adjustAlignedPolygon() introduces.

BUG:512577